--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* <===================TYPOGRAPHY & FONTS===================> */
 
 @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
 
 /* <===================CSS VARIABLES===================> */
 
