--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ label.logo{
     line-height: 80px;
     padding: 0 0 0 30px;
     font-weight: bold;
+    font-family: "Dancing Script", cursive
 }
 nav ul{
     float: right;
