--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     box-sizing: border-box;
     margin: 0;
     font-family: 'Cinzel', serif;
-    color: #212121;
+    color: #ffbf00;
 }
 html{
     scroll-behavior: smooth;
