--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     --h3-size: 1.7rem;
     --text-size: 1.3rem;
     --horizontal-margin-spacing:6rem;
-    --grey-color-light: rgba(232,230,230,.6);
+    --grey-color-light: #570202;
     --grey-color: rgba(232,230,230,1);
 }
 
@@ -187,7 +187,7 @@ a:hover{
     justify-content: space-between;
 }
 .home-img{
-    background-image: url(https://firebasestorage.googleapis.com/v0/b/chuck-842bb.appspot.com/o/GurAmanWed%2Fpic1.jpg?alt=media&token=5dbf5af2-354b-464c-9db2-7da57b484eda);
+    background-image: url(https://i.imgur.com/4jTBJdi.jpeg);
     background-size: cover;
     background-position: center;
 }
@@ -233,7 +233,7 @@ a:hover{
     margin: 8vh 0;
 }
 .timeline-img{
-    background-image: url(https://firebasestorage.googleapis.com/v0/b/chuck-842bb.appspot.com/o/GurAmanWed%2Fpic2.jpg?alt=media&token=7a0e5f94-d68e-4d32-bd3b-2a82b7acd40c);
+    background-image: url(blob:https://imgur.com/5d9dc211-4e3c-4302-8f90-cb38db74e2c3);
     height: 70vh;
     width: 30vw;
     background-position: center;
