--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ a:hover{
     margin: 8vh 0;
 }
 .timeline-img{
-    background-image: url(blob:https://imgur.com/5d9dc211-4e3c-4302-8f90-cb38db74e2c3);
+    background-image: url(https://i.imgur.com/XbTi4S2.jpeg);
     height: 70vh;
     width: 30vw;
     background-position: center;
