--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
     --h3-size: 1.7rem;
     --text-size: 1.3rem;
     --horizontal-margin-spacing:6rem;
-    --grey-color-light: #570202;
-    --grey-color: rgba(232,230,230,1);
+    --grey-color-light: #000000;
+    --grey-color: #570202;
 }
 
 /* <===================UNIVERSAL CSS===================> */
