--- a/style.css
+++ b/style.css
@@ -383,7 +383,7 @@ a:hover{
 .hands{
     height: 120vh;
     width: 100%;
-    background-image: url(https://i.imgur.com/olr5tcf.jpeg);
+    background-image: url(https://i.imgur.com/FreZQWi.jpeg);
     background-size: cover;
     background-position-y: center;
     background-attachment: fixed;
