--- a/style.css
+++ b/style.css
@@ -340,6 +340,11 @@ a:hover{
     background-position-y: top;
     background-image: url(https://i.imgur.com/XbTi4S2.jpeg);
 }
+.gallery-img:nth-child(4){
+    background-image: url(https://i.imgur.com/HBBB88G.png);
+}
+
+
 @media (max-width:1000px){
     .gallery{
         flex-direction: column;
