--- a/style.css
+++ b/style.css
@@ -340,9 +340,6 @@ a:hover{
     background-position-y: top;
     background-image: url(https://i.imgur.com/XbTi4S2.jpeg);
 }
-.gallery-img:nth-child(4){
-    background-image: url(https://i.imgur.com/HBBB88G.png);
-}
 
 
 @media (max-width:1000px){
@@ -397,6 +394,7 @@ a:hover{
 
 #motif{
     position: relative;
+    display: abosolute;
 }
 
     /* <===================STAY===================> */
