--- a/style.css
+++ b/style.css
@@ -395,6 +395,7 @@ a:hover{
     background-image: url(https://i.imgur.com/HBBB88G.png);
     background-position: center;
     background-size: cover;
+        height: 30vh;
 }
 <img name="motif" src="">
 }
